# devcontainer

./: Dockerfile  README.md  docker-compose.yml
backend/: app.py  pyproject.toml
