[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sample"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
sqlalchemy = "^1.3.22"
flask_sqlalchemy = "^2.4.4"
pymysql = "^0.10.1"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
